--- a/src/Sextant.XamForms/Sextant.XamForms.csproj
+++ b/src/Sextant.XamForms/Sextant.XamForms.csproj
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ReactiveUI" Version="11.*" />
+    <PackageReference Include="ReactiveUI" Version="11.1.12" />
     <PackageReference Include="System.Collections.Immutable" Version="1.7.0" />
   </ItemGroup>
 
