Added the git lfs folders to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -256,3 +256,5 @@ LocalPackages/
 **/*.Droid/**/[Rr]esource.[Dd]esigner.cs
 **/Android/**/[Rr]esource.[Dd]esigner.cs
 **/Droid/**/[Rr]esource.[Dd]esigner.cs
+/hooks
+/lfs/objects
